--- a/CreativeWritersToolkitApp/CreativeWritersToolkitApp.csproj
+++ b/CreativeWritersToolkitApp/CreativeWritersToolkitApp.csproj
@@ -25,6 +25,8 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.18" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.18" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
+    <PackageReference Include="System.Text.Json" Version="7.0.0-preview.7.22375.6" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
   </ItemGroup>
 </Project>
