--- a/CreativeWritersToolkitApp/CreativeWritersToolkitApp.csproj
+++ b/CreativeWritersToolkitApp/CreativeWritersToolkitApp.csproj
@@ -31,4 +31,7 @@
     <PackageReference Include="System.IO.Compression" Version="4.3.0" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Prompts\" />
+  </ItemGroup>
 </Project>
